# BayesGAM

./: 404.html  README.md  gen_imgs.py  index.html  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: ci.yaml  ci.yml  ci2.yml  mkdocs.yaml
bayesgam/: __init__.py  bayesgam.py  callbacks.py  core.py  distributions.py  links.py  penalties.py  terms.py  utils.py
bayesgam/datasets/: __init__.py  load_datasets.py
bayesgam/tests/: conftest.py  test_GAM_methods.py  test_GAM_params.py  test_GAMs.py  test_core.py  test_datasets.py  test_gridsearch.py  test_partial_dependence.py  test_penalties.py  test_terms.py  test_utils.py
docs/: index.md  start.md  tour.md
docs/distributions/: index.md  normal.md
notebooks/: GAMs.qmd  testing.qmd
pygam/: pygam.py
src/bayesgam/: __init__.py  bayesgam.py  core.py  distributions.py  links.py  penalties.py  terms.py  utils.py
