[project]
name = "pygam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mock>=5.1.0",
    "numpy>=2.2.0",
    "progressbar2>=4.5.0",
    "scipy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
]
